<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    tools:context=".VideoPlayerActivity">
    <RelativeLayout
        android:id="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/video_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@android:color/background_dark"
                app:resize_mode="fit"
                app:hide_on_touch="true"
                app:show_timeout="5000"
                app:rewind_increment="10000"
                app:fastforward_increment="10000"
                app:use_controller="true"
                app:player_layout_id="@layout/exo_simple_player_view"
                app:controller_layout_id="@layout/custom_controller"/>
        </LinearLayout>
    <ProgressBar
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/white"
        tools:targetApi="lollipop" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/p2"
        android:layout_below="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/video_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <TextView
            android:id="@+id/subject_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:padding="5dp"
            android:background="@color/colorPrimaryDark"
            android:textStyle="italic|bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/btn_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/exo_rew"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_like"
                    app:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_like"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_dislike"
                    app:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_dislike"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_share"
                    app:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_share"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_save"
                    app:tint="@color/colorPrimaryDark"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_save"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

            </LinearLayout>



        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_below="@+id/p2"
        android:id="@+id/adViewContainer"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_marginTop="2dp"
        android:layout_below="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:groupIndicator="@null"
            android:id="@+id/course_expandablelistview"/>
        <ProgressBar
            android:id="@+id/ProgressBar2"
            android:layout_width="80dp"
            android:padding="5dp"
            android:background="@drawable/round_white"
            android:layout_height="80dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>